# sleekit

./: .gitignore  CITATION.cff  LICENSE  README.md  codebook.py  datautils.py  export_statistics.py  modelutils.py  pyproject.toml  run_quantization.py  trial.py
.github/workflows/: pytest.yml
experiments/: bits.py  compare.py  correction.py  dampening.py  distribution.py  local_search.py  ordering.py  scaling.py
results/: bits.csv  compare.csv  compare_1.5b.csv  compare_1b.csv  compare_2b.csv  compare_3b.csv  correction.csv  correction_1.5b.csv  correction_1b.csv  correction_2b.csv  correction_3b.csv  dampening_1.5b.csv  dampening_1b.csv  dampening_2b.csv  dampening_3b.csv  extract.sh  graph.py  local_search_1.5b.csv  local_search_1b.csv  local_search_2b.csv  local_search_3b.csv  ordering_1.5b.csv  ordering_1b.csv  ordering_2b.csv  ordering_3b.csv  run.sh  scaling.csv  scaling_1.5b.csv  scaling_1b.csv  scaling_2b.csv  scaling_3b.csv
sleekit/: __init__.py  codebook.py  codebooks.py  obq.py  scaling.py  statistics.py
tests/: test_codebook.py  test_codebooks.py  test_obq.py  test_scaling.py  test_statistics.py
