
[project]
name = "sleekit"
version = "0.0.1"
description = "Neural Network Quantization"
readme = "README.md"
authors = [
    {name = "Gabriel Gouvine", email = "gabriel.gouvine_sleekit@m4x.org>"}
]
dependencies = ["torch", "numpy"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]